--- a/package.json
+++ b/package.json
@@ -2,8 +2,13 @@
     "name": "barbecueee",
     "displayName": "barbecueee",
     "description": "Does an incredibly epic git reset --hard",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "publisher": "ricardocino",
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/axios/axios.git"
+    },
     "engines": {
         "vscode": "^1.18.0"
     },
@@ -30,9 +35,9 @@
         "test": "npm run compile && node ./node_modules/vscode/bin/test"
     },
     "devDependencies": {
-        "typescript": "^2.6.1",
-        "vscode": "^1.1.6",
-        "@types/node": "^7.0.43",
-        "@types/mocha": "^2.2.42"
+        "@types/mocha": "^2.2.48",
+        "@types/node": "^7.10.6",
+        "typescript": "^2.9.2",
+        "vscode": "^1.1.6"
     }
 }
